policykit-1 (0.113-4) UNRELEASED; urgency=medium

  [ Simon McVittie ]
  * Run tests with a session bus pretending to be the system bus,
    so they can pass in a buildd environment

 -- Michael Biebl <biebl@debian.org>  Sat, 16 Apr 2016 14:34:11 +0200

policykit-1 (0.113-3) experimental; urgency=medium

  * Generate tight inter-package dependencies.
    This ensures that everything from the same source package is upgraded in
    lockstep. (Closes: #817998)
  * Drop obsolete Breaks from pre-wheezy.

 -- Michael Biebl <biebl@debian.org>  Thu, 14 Apr 2016 14:15:09 +0200

policykit-1 (0.113-2) experimental; urgency=medium

  [ Simon McVittie ]
  * policykit-1.links: statically alias polkit.service (upstream's name)
    as polkitd.service (Debian's historical name)

  [ Martin Pitt ]
  * debian/policykit-1.{pre,pos}inst: Temporarily mask polkitd.service while
    policykit-1 is unpackaged but not yet configured. During that time we
    don't yet have our D-Bus policy in /etc so that polkitd cannot work yet.
    This can be dropped once the D-Bus policy moves to /usr.
    (Closes: #794723, LP: #1447654)

 -- Martin Pitt <mpitt@debian.org>  Wed, 21 Oct 2015 08:28:11 +0200

policykit-1 (0.113-1) experimental; urgency=medium

  * Team upload.

  [ Martin Pitt ]
  * policykit-1.postinst: Don't kill polkitd under systemd, but properly
    restart it. This avoids killing it shortly after systemd tries to
    bus-activate it on installation. (LP: #1447654)

  [ Simon McVittie ]
  * Disable silent build rules. (Previously done in Ubuntu, although
    it seems to have been lost in a merge somewhere.)
  * New upstream release
    - drop most patches: they either came from upstream, or have been
      merged upstream
    - add new function to symbols file
    - fixes CVE-2015-4625, CVE-2015-3218, CVE-2015-3255, CVE-2015-3256
  * Annotate remaining patches with a bit more information. They are:
    - 01_pam_polkit.patch: use Debian's common-* infrastructure,